boot_run_log_7.txt

> Task :compileJava FAILED
C:\Users\milig\OneDrive\Desktop\SII-ERP-AI\src\main\java\com\casrusil\SII_ERP_AI\modules\integration_sii\infrastructure\adapter\in\rest\SiiIntegrationController.java:3: error: class, interface, enum, or record expected
}
^
C:\Users\milig\OneDrive\Desktop\SII-ERP-AI\src\main\java\com\casrusil\SII_ERP_AI\modules\integration_sii\infrastructure\adapter\in\rest\SiiIntegrationController.java:12: error: statements not expected outside of methods and initializers
List<RcvData>rcvData;if(isPurchase){rcvData=downloadRcvUseCase.downloadPurchaseRegister(token,companyId,rutEmpresa,period);}else{rcvData=downloadRcvUseCase.downloadSalesRegister(token,companyId,rutEmpresa,period);}
                     ^
C:\Users\milig\OneDrive\Desktop\SII-ERP-AI\src\main\java\com\casrusil\SII_ERP_AI\modules\integration_sii\infrastructure\adapter\in\rest\SiiIntegrationController.java:14: error: statements not expected outside of methods and initializers
return ResponseEntity.ok(rcvData);}}
^
C:\Users\milig\OneDrive\Desktop\SII-ERP-AI\src\main\java\com\casrusil\SII_ERP_AI\modules\integration_sii\infrastructure\adapter\in\rest\SiiIntegrationController.java:14: error: class, interface, enum, or record expected
return ResponseEntity.ok(rcvData);}}
                                  ^
C:\Users\milig\OneDrive\Desktop\SII-ERP-AI\src\main\java\com\casrusil\SII_ERP_AI\modules\integration_sii\infrastructure\adapter\in\rest\SiiIntegrationController.java:1: error: compact source file should not have package declaration
package com.casrusil.SII_ERP_AI.modules.integration_sii.infrastructure.adapter.in.rest;
^
5 errors

[Incubating] Problems report is available at: file:///C:/Users/milig/OneDrive/Desktop/SII-ERP-AI/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\milig\OneDrive\Desktop\SII-ERP-AI\src\main\java\com\casrusil\SII_ERP_AI\modules\integration_sii\infrastructure\adapter\in\rest\SiiIntegrationController.java:3: error: class, interface, enum, or record expected
  }
  ^
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 6s
1 actionable task: 1 executed
